@@ -4,7 +4,8 @@ Changes
 2.5.10a2 (unreleased)
 ---------------------
 
-- Nothing changed yet.
+* Fix ENLHTMLParser for unicode URLs.
+  [timo]
 
 
 2.5.10a1 (15/02/2011)
